Fix up overlapping error message

--- a/src/styles/components/Attachment.scss
+++ b/src/styles/components/Attachment.scss
@@ -23,3 +23,7 @@
 .AttachmentBox {
   z-index: 100;
 }
+
+.Attachment-error {
+  max-width: 90%;
+}
